# lib_clock

./: CMakeLists.txt  lib_clock.c  lib_clock.h  lib_clock_POSIX.c
include/: lib_clock.h
src/: CMakeLists.txt
src/posix/: CMakeLists.txt  lib_clock_POSIX.c
src/stm32/: CMakeLists.txt  lib_clock_STM32.c
